--- a/src/PixelBattles.Server.Grains/PixelBattles.Server.Grains.csproj
+++ b/src/PixelBattles.Server.Grains/PixelBattles.Server.Grains.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PixelBattles.Server.Grains.Abstractions\PixelBattles.Server.Grains.Abstractions.csproj" />
   </ItemGroup>
 
