--- a/src/PixelBattles.Server.Silo/PixelBattles.Server.Silo.csproj
+++ b/src/PixelBattles.Server.Silo/PixelBattles.Server.Silo.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PixelBattles.Server.Grains\PixelBattles.Server.Grains.csproj" />
   </ItemGroup>
 
