--- a/src/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.csproj
+++ b/src/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PixelBattles.Chunkler.Grains.Abstractions\PixelBattles.Chunkler.Grains.Abstractions.csproj" />
   </ItemGroup>
 
