--- a/src/PixelBattles.Chunkler.Hosting.Console/PixelBattles.Chunkler.Hosting.Console.csproj
+++ b/src/PixelBattles.Chunkler.Hosting.Console/PixelBattles.Chunkler.Hosting.Console.csproj
@@ -7,6 +7,14 @@
     <RootNamespace>PixelBattles.Chunkler.Hosting</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.2</LangVersion>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\PixelBattles.Chunkler.Hosting\PixelBattles.Chunkler.Hosting.csproj" />
   </ItemGroup>
