--- a/src/PixelBattles.Chunkler.Hosting/PixelBattles.Chunkler.Hosting.csproj
+++ b/src/PixelBattles.Chunkler.Hosting/PixelBattles.Chunkler.Hosting.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="2.0.0" />
+    <PackageReference Include="PixelBattles.Server.Client" Version="0.1.1-CI-20180521-201225" />
   </ItemGroup>
 
   <ItemGroup>
