--- a/src/PixelBattles.Chunkler.Hosting.Console/PixelBattles.Chunkler.Hosting.Console.csproj
+++ b/src/PixelBattles.Chunkler.Hosting.Console/PixelBattles.Chunkler.Hosting.Console.csproj
@@ -11,6 +11,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
   </ItemGroup>
