--- a/src/PixelBattles.Chunkler.Client.Abstractions/PixelBattles.Chunkler.Client.Abstractions.csproj
+++ b/src/PixelBattles.Chunkler.Client.Abstractions/PixelBattles.Chunkler.Client.Abstractions.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>PixelBattles.Chunkler.Client</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
