--- a/src/PixelBattles.Chunkler.Abstractions/PixelBattles.Chunkler.Abstractions.csproj
+++ b/src/PixelBattles.Chunkler.Abstractions/PixelBattles.Chunkler.Abstractions.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>PixelBattles.Chunkler.Client</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.1.2" />
   </ItemGroup>
 
 </Project>
