--- a/src/PixelBattles.Chunkler.Hosting/PixelBattles.Chunkler.Hosting.csproj
+++ b/src/PixelBattles.Chunkler.Hosting/PixelBattles.Chunkler.Hosting.csproj
@@ -1,13 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>PixelBattles.Chunkler.Hosting.Console</AssemblyName>
+    <RootNamespace>PixelBattles.Chunkler.Hosting</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Orleans.Server" Version="2.0.0" />
-    <PackageReference Include="PixelBattles.Server.Client" Version="1.0.0-CI-20180802-210505" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
