--- a/src/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.csproj
+++ b/src/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.2" />
-    <PackageReference Include="Microsoft.Orleans.Client" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
