--- a/src/PixelBattles.Chunkler.Grains/PixelBattles.Chunkler.Grains.csproj
+++ b/src/PixelBattles.Chunkler.Grains/PixelBattles.Chunkler.Grains.csproj
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.0.0" />
     <PackageReference Include="PixelBattles.API.Client" Version="0.1.133" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0003" />
+	<PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.1.2" />
+	<PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.1.2" PrivateAssets="all">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
