Fix integration test

--- a/test/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.Tests.csproj
+++ b/test/PixelBattles.Chunkler.Client/PixelBattles.Chunkler.Client.Tests.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\PixelBattles.Chunkler.Client\PixelBattles.Chunkler.Client.csproj" />
+    <ProjectReference Include="..\..\src\PixelBattles.Chunkler.Hosting\PixelBattles.Chunkler.Hosting.csproj" />
   </ItemGroup>
 
 </Project>
