--- a/src/PixelBattles.Chunkler.Abstractions/PixelBattles.Chunkler.Abstractions.csproj
+++ b/src/PixelBattles.Chunkler.Abstractions/PixelBattles.Chunkler.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.4" />
-	<PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.4" PrivateAssets="all">
+	  <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.4" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
