--- a/src/PixelBattles.Chunkler.Grains/PixelBattles.Chunkler.Grains.csproj
+++ b/src/PixelBattles.Chunkler.Grains/PixelBattles.Chunkler.Grains.csproj
@@ -6,12 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="PixelBattles.API.Client" Version="0.1.163" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0005" />
+    <PackageReference Include="PixelBattles.API.Client" Version="0.1.175" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
 	  <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.4" />
 	  <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.4" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0006" />
   </ItemGroup>
 
   <ItemGroup>
